--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "author": "Dmitry Kostyuk",
     "license": "ISC",
     "devDependencies": {
+        "browser-sync": "^2.26.14",
         "del": "^6.0.0",
         "gulp": "^4.0.2",
         "gulp-clean-css": "^4.3.0",
-        "gulp-less": "^4.0.1",
-        "less-plugin-clean-css": "^1.5.1"
+        "gulp-less": "^4.0.1"
     }
 }
